--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,11 +17,11 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - run:
-          command:"echo workd"
+          command:"echo world"
 workflows:
   # Name the workflow "welcome"
   welcome:
     # Run the welcome/run job in its own container
     jobs:
-      - print_hello
-      - print_world
+      - "print_hello"
+      - "print_world"
