--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,13 +8,13 @@ orbs:
 jobs:
   print_hello:
     docker:
-      - image:circleci/node:13.8.0
+      - image:"circleci/node:13.8.0"
     steps:
       - run:
          command:"echo hello"
   print_world:
     docker:
-      - image: circleci/node:13.8.0
+      - image: "circleci/node:13.8.0"
     steps:
       - run:
           command:"echo world"
