--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,20 +8,21 @@ orbs:
 jobs:
   print_hello:
     docker:
-      - image:"circleci/node:13.8.0"
+      - image: circleci/node:13.8.0
     steps:
-      - run:
-         command:"echo hello"
+      - run: echo hello
   print_world:
     docker:
-      - image: "circleci/node:13.8.0"
+      - image: circleci/node:13.8.0
     steps:
-      - run:
-          command:"echo world"
+      - run: echo world
 workflows:
   # Name the workflow "welcome"
   welcome:
     # Run the welcome/run job in its own container
     jobs:
-      - "print_hello"
-      - "print_world"
+      - Welcome/run
+      - print_hello
+      - print_world:
+          requires:
+            - print_hello
