--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,12 +16,19 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - run: echo world
+  print_name:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - run: echo $MY_NAME
+
 workflows:
   # Name the workflow "welcome"
   welcome:
     # Run the welcome/run job in its own container
     jobs:
-      - print_hello
-      - print_world:
-          requires:
-            - print_hello
+      - print_name
+      # - print_hello
+      # - print_world:
+      #     requires:
+      #       - print_hello
