--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,22 @@ orbs:
   welcome: circleci/welcome-orb@0.4.1
 # Orchestrate or schedule a set of jobs
 jobs:
+  save_hello_world_output:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - run: echo hello > hello.txt
+      - persist_to_workspace:
+         root: hello.txt
+         paths:
+           - target/output
+  print_output_file:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - run: echo hello > hello.txt
+      - attach_workspace:
+         at: /target/output
   print_hello:
     docker:
       - image: circleci/node:13.8.0
