--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,50 +1,22 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
 orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
-# Orchestrate or schedule a set of jobs
+    hello: circleci/hello-build@0.0.5
+
+
+commands:
+  print_pipeline_id:
+    description: "A very simple command for demonstration purposes"
+    steps:
+      - run: echo $CIRCLE_WORKFLOW_ID
+
 jobs:
-  save_hello_world_output:
+  hello :
     docker:
-      - image: circleci/node:13.8.0
+      - image: circleci/node:13.8.0 
     steps:
-      - run: echo hello > hello.txt
-      - persist_to_workspace:
-         root: hello.txt
-         paths:
-           - target/output
-  print_output_file:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - run: echo hello > hello.txt
-      - attach_workspace:
-         at: /target/output
-  print_hello:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - run: echo hello
-  print_world:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - run: echo world
-  print_name:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - run: echo $MY_NAME
+      - print_pipeline_id 
 
 workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
-    jobs:
-      - print_name
-      # - print_hello
-      # - print_world:
-      #     requires:
-      #       - print_hello
+    "Hello Workflow":
+        jobs:
+          - hello
